2006-10-25  Philip Van Hoof <pvanhoof@gnome.org>

	* libtinymail-camel/camel-lite: Applied patch #75412 of Bug #363695
	which was done by Matthew Barnes (porting the patch from evolution-
	data-server to camel-lite)
	* libtinymail-camel/camel-lite: Bugfixes (important ones)
	
2006-10-24  Philip Van Hoof <pvanhoof@gnome.org>

	* libtinymail-camel/camel-lite: All sorts of bugfixes

2006-10-23  Philip Van Hoof <pvanhoof@gnome.org>

	* libtinymail-camel/camel-lite: Drastic reduction of memory
	consumption on initial download of both IMAP and NNTP folders.
	* libtinymail-gnome-desktop: Default status of the device is now
	offline in stead of online (for example in case network manager
	installation was invalid or not found)
	* Bugfix reported by Nitin.Mahajan@nokia.com
	* libtinymail-camel/camel-lite: Merging with Matthen Barnes's stuff

2006-10-20  Sankarshan Mukhopadhyay <sankarshan.mukhopadhyay@gmail.com>

	* docs/deve/reference/libtinymail-docs.sgml: Language corrections in
	the introduction of the API reference documentation.

2006-10-20  Philip Van Hoof <pvanhoof@gnome.org>

	* libtinymail-camel/camel-lite: Allocation of the CamelFolderInfo is
	now with GSlice in stead of many different malloc ways. This one needs
	testing!

2006-10-19  Philip Van Hoof <pvanhoof@gnome.org>

	* libtinymail-camel: bugfix in tny-camel-store-account.c
	* libtinymail-camel/camel-lite: Merged with new stuff from Matthew
	* Memory consumption reduction in libtinymail-camel/camel-lite

2006-10-18  Philip Van Hoof <pvanhoof@gnome.org>

	* libtinymail-camel/camel-lite/: EMsgPort, EThread, EMutex and
	EMemChunk replacements with modern glib infrastructure like
	GAsyncQueue, GThread, GMutex and g_slice_alloc

2006-10-17  Philip Van Hoof <pvanhoof@gnome.org>

	* Added libtinymail-camel/camel-lite
	* Made a huge amount of compiler warning fixes to libtinymail-camel/camel-lite
	* Reorganization of some build scripts
	* Fixed the tests and unit tests
	* Fixed the documentation build procedure
