@@ -879,10 +879,14 @@ check_header(struct _ESExp *f, int argc, struct _ESExpResult **argv, CamelFolder
 		} else if (!g_ascii_strcasecmp(headername, "cc")) {
 			header = camel_message_info_cc(search->current);
 			type = CAMEL_SEARCH_TYPE_ADDRESS;
-		} else if (!g_ascii_strcasecmp(headername, "x-camel-mlist")) {
+		} 
+#ifdef NON_TINYMAIL_FEATURES
+		else if (!g_ascii_strcasecmp(headername, "x-camel-mlist")) {
 			header = camel_message_info_mlist(search->current);
 			type = CAMEL_SEARCH_TYPE_MLIST;
-		} else {
+		} 
+#endif
+		else {
 			e_sexp_resultv_free(f, argc, argv);
 			e_sexp_fatal_error(f, _("Performing query on unknown header: %s"), headername);
 		}
