@@ -1,3 +1,8 @@
+2006-10-26  Philip Van Hoof <pvanhoof@gnome.org>
+
+	*  libtinymail-camel/camel-lite: Aggressive memory reductions by
+	removing unused features and fields from Camel
+
 2006-10-25  Philip Van Hoof <pvanhoof@gnome.org>
 
 	* libtinymail-camel/camel-lite: Applied patch #75412 of Bug #363695
